# debrief

./: .gitignore  Dockerfile  README.md  api.py  demo.py  docker-compose.yml  main.py  pyproject.toml
.old/: test.py
obsidian_debrief/: actions.py  analyze.py  config.py
obsidian_debrief/prompts/: system.py
obsidian_debrief/utils/: files.py  llm.py  project.py
